--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,30 @@
 <!-- init -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Todo</h1>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Név</th>
+                    <th>Kész</th>
+                </tr>
+            </thead>
+            <tbody id = "tbody"></tbody>
+        </table>
+
+    </div>
+
+    <script src="app.js"></script>
+
+</body>
+</html>
