--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,9 @@
 
     </div>
 
+    <div class="about">
+        Király Péter, 2023-03-23, <br> SZOFT 1/2/E
+    </div>
     <script src="app.js"></script>
 
 </body>
