--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,13 @@
-<!-- init -->
+<!--
+File: index.html
+Author: Király Péter
+Copyright: 2023, Király Péter
+Group: Szoft 1/2/E (I-2 E)
+Date: 2023-03-23
+Github: https://github.com/KiralyPeter/Jscript_2023-03-23
+Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
